@@ -47,6 +47,7 @@ Bugs fixed:
 - 2433594 sfcb causing 'unaligned access' errors on IA64
 - 2316307 SFCB segfaults on missing instance file
 - 2390515 Fix multiple resource leaks in SFCB detected by Coverity
+- 2407344 Message size should be checked for a reasonable value
 
 Changes in 1.3.2
 ================
